kubernete/local/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo 
spec:
  selector:
    app: echo
    release: summer
  ports:
    - name: http
      port: 80


//임시 컨테이너 배포
kubectl run -i --rm --tty debug --image=gihyodocker/fundamental:0.1.0 --restart=Never -- bash -il 
 
kubectl logs -f echo-summer-dtblk -c echo
